--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,12 @@
     <p class="alert"><%= alert %></p>
       	<div class="row" style="margin-bottom: 5px;">
 	  		<div class="col s12 m12 l12 valign-wrapper" style="height: 10vh;background-color: #37474f;">
-	  			<span class="col s6 m6 l3 blue-grey-text text-lighten-5 valign flow-text">Superiiens</span>
+	  			<span class="col s6 m6 l3 blue-grey-text text-lighten-5 valign flow-text"><%= link_to "Superiiens", root_path, :style => "color: #eceff1" %></span>
 	  			<span class="col s0 m0 l6 blue-grey-text text-lighten-5"></span>
 	  			<span class="col s6 m6 l2 blue-grey-text text-lighten-5 right-align"><a class="flow-text" href="#" style="color: #eceff1">Profil</a></span>
 	  		</div>
   		</div>
-  		<div class="col s12 m12 l12" style="background-color: #263238;height: 5px"></div>
+  		<div class="col s12 m12 l12" style="background-color: #263238;height: 5px; margin-bottom: 10vh"></div>
     <%= yield %>
   </body>
 </html>
