--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,18 @@
+<div class="col s10 m10 l10 offset-s1 offset-m1 offset-l1">
 <h2>Resend confirmation instructions</h2>
 
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
+  <div class="field col s10 m10 l10 offset-s1 offset-m1 offset-l1">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
   </div>
 
-  <div class="actions">
+  <div class="actions col s10 m10 l10 offset-s1 offset-m1 offset-l1 right">
     <%= f.submit "Resend confirmation instructions" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
