--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,14 +1,15 @@
-<h2>Sign up</h2>
+<div class="container">
+<h2 class="col s10 m10 l10 offset-s1 offset-m1 offset-l1">S'inscrire</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
+  <div class="field col s10 m10 l10 offset-s1 offset-m1 offset-l1">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
 
-  <div class="field">
+  <div class="field col s10 m10 l10 offset-s1 offset-m1 offset-l1">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -16,14 +17,15 @@
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
-  <div class="field">
+  <div class="field col s10 m10 l10 offset-s1 offset-m1 offset-l1">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="actions col s10 m10 l10 offset-s1 offset-m1 offset-l1 right">
+    <%= f.submit "S'inscrire" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
