--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,4 +28,20 @@
             </div>
           </div>
       </div>
+      <div class="container">
+      <div id="map" class="map"></div></div>
+        <script type="text/javascript">
+          var map = new ol.Map({
+            target: 'map',
+            layers: [
+              new ol.layer.Tile({
+                source: new ol.source.OSM()
+              })
+            ],
+            view: new ol.View({
+              center: ol.proj.fromLonLat([7.7455300, 48.5839200]),
+              zoom: 13
+            })
+          });
+        </script>
  
