--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <%= form_for(question) do |f| %>
   <% if question.errors.any? %>
     <div id="error_explanation">
@@ -15,3 +16,4 @@
     <%= f.submit %>
   </div>
 <% end %>
+</div>
