--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <p id="notice"><%= notice %></p>
 
 <h1>Questions</h1>
@@ -23,3 +24,4 @@
 <br>
 
 <%= link_to 'New Question', new_question_path %>
+</div>
