Rail question show + ...

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
                 <p>Si vous avez une question à poser à des associations ou à d'autres utilisateurs cliquez en dessous.</p>
               </div>
               <div class="card-action">
-                <a class="light-blue-text accent-3" href="#">Poser une question</a>
+                <%= link_to "Poster une question", new_question_path, :class => "light-blue-text accent-3" %>
               </div>
             </div>
           </div>
