--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
 <p id="notice"><%= notice %></p>
 
+<h1><%= @question.title %></h1>
+<p><%= @question.contents %></p>
 <%= link_to 'Edit', edit_question_path(@question) %> |
 <%= link_to 'Back', questions_path %>
 </div>
