--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -13,6 +13,8 @@
   <tbody>
     <% @questions.each do |question| %>
       <tr>
+        <td><div class="col s12 m12 l12"><h5><%= question.title %></h5></div></td>
+        <td><div class="col s12 m12 l12"><%= question.contents %></div></td>
         <td><%= link_to 'Show', question %></td>
         <td><%= link_to 'Edit', edit_question_path(question) %></td>
         <td><%= link_to 'Destroy', question, method: :delete, data: { confirm: 'Are you sure?' } %></td>
