--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,17 @@
         <link rel="stylesheet" href="https://openlayers.org/en/v3.19.1/css/ol.css" type="text/css">
         <style>
           .map {
-            height: 400px;
+            height: 85vh;
             width: 100%;
           }
         </style>
         <script src="https://openlayers.org/en/v3.19.1/build/ol.js" type="text/javascript"></script>
+
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
 
   <body style="background-color: #eceff1">
+  <div id="monancre"></div>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
       	<div class="row" style="margin-bottom: 5px;">
